--- a/translationos.yml
+++ b/translationos.yml
@@ -14,7 +14,7 @@ files:
     service_type: premium
     source_pattern: src/res/!(*-*).properties
     source_locale: en-GB
-    target_pattern: src/res/{{original_file_name}}-{{lang_2}}-{{language}}.properties
+    target_pattern: src/res/en/{{original_file_name}}-{{lang_2}}-{{language}}.properties
     target_locales: ['de-DE', 'ru-RU', 'et-ET']
   - translation: professional
     service_type: premium
