--- a/src/en/res/strings.properties
+++ b/src/en/res/strings.properties
@@ -1,3 +1,3 @@
 welcome.message=Welcome to our app
 welcome.button=Continue
-welcome.tooltip=A cold welcome message
+welcome.tooltip=A colder welcome message
