--- a/translationos.yml
+++ b/translationos.yml
@@ -12,7 +12,7 @@ pull_requests:
 files:
   - translation: professional
     service_type: premium
-    source_pattern: src/res/!(*-*).properties
+    source_pattern: src/en/res/!(*-*).properties
     source_locale: en-GB
     target_pattern: src/en/res/{{original_file_name}}-{{lang_2}}-{{language}}.properties
     target_locales: ['de-DE', 'ru-RU', 'et-ET']
