--- a/translationos.yml
+++ b/translationos.yml
@@ -1,30 +1,12 @@
 on:
   branches:
     - main
-    - feature/*
 pull_requests:
-  mode: pr_per_lang
-  labels:
-    - localization
-    - documentation
-    - translation
-    - bug
+  mode: pr_all_langs
 files:
   - translation: professional
     service_type: premium
-    source_pattern: src/en/res/!(*-*).properties
+    source_pattern: src/en/res/test.json
     source_locale: en-GB
-    target_pattern: src/en/res/{{original_file_name}}-{{lang_2}}-{{language}}.properties
-    target_locales: ['de-DE', 'ru-RU', 'et-ET']
-  - translation: professional
-    service_type: premium
-    source_pattern: src/res/!(*-*).json
-    source_locale: en-GB
-    target_pattern: src/res/{{original_file_name}}-{{lang_2}}.json
-    target_locales: ['de-DE', 'qu-PE', 'et-ET', 'dd-EE']
-  - translation: professional
-    service_type: premium
-    source_pattern: src/res/!(*-*).md
-    source_locale: en-GB
-    target_pattern: src/res/{{original_file_name}}-{{lang_2}}:{{language}}.md
-    target_locales: ['de-DE', 'qu-PE', 'fr-FR', 'ar-EG', 'ru-RU', 'dd-EE', 'gg-GG']
+    target_pattern: src/en/res/{{original_file_name}}-{{lang_2}}.json
+    target_locales: ['de-DE', 'fr-FR']
