--- a/translationos.yml
+++ b/translationos.yml
@@ -6,7 +6,7 @@ pull_requests:
 files:
   - translation: professional
     service_type: premium
-    source_pattern: src/en/res/test.json
+    source_pattern: src/en/test.json
     source_locale: en-GB
-    target_pattern: src/en/res/{{original_file_name}}-{{lang_2}}.json
+    target_pattern: src/en/{{original_file_name}}-{{lang_2}}.json
     target_locales: ['de-DE', 'fr-FR']
